// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders columns correctly with subaccounts 1`] = `
Array [
  Object {
    "label": "Name",
    "sortKey": "name",
    "width": "22%",
  },
  Object {
    "label": "ID",
    "sortKey": "id",
    "width": "22%",
  },
  Object {
    "label": "Status",
    "sortKey": "published",
    "width": "15%",
  },
  Object {
    "label": "Updated",
    "sortKey": "last_update_time",
  },
  Object {
    "label": "Subaccount",
    "sortKey": [Function],
    "width": "20%",
  },
]
`;

exports[`renders correctly 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Build, test, preview and send your transmissions.
      </p>,
      "image": "Templates",
      "show": false,
      "title": "Manage your email templates",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Template",
      "to": "/templates/create",
    }
  }
  title="Templates"
>
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "sortKey": "name",
          "width": "22%",
        },
        Object {
          "label": "ID",
          "sortKey": "id",
          "width": "22%",
        },
        Object {
          "label": "Status",
          "sortKey": "published",
          "width": "15%",
        },
        Object {
          "label": "Updated",
          "sortKey": "last_update_time",
        },
      ]
    }
    defaultSortColumn="name"
    defaultSortDirection="asc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "id",
          "name",
        ],
        "itemToStringKeys": Array [
          "name",
          "id",
          "subaccount_id",
        ],
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "name": "Temp 1",
        },
        Object {
          "name": "Temp 2",
        },
      ]
    }
  />
</Page>
`;

exports[`renders empty state 1`] = `
<EmptyState
  image="Templates"
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Template",
      "to": "/templates/create",
    }
  }
  title="Manage your email templates"
>
  <p>
    Build, test, preview and send your transmissions.
  </p>
</EmptyState>
`;

exports[`renders errors when present 1`] = `
<ApiErrorBanner
  errorDetails="Uh oh! It broke. "
  message="Sorry, we seem to have had some trouble loading your templates."
  reload={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    }
  }
/>
`;

exports[`renders rows correctly with NO subaccounts 1`] = `
Array [
  Array [
    <Link
      replace={false}
      to="/templates/edit/id3"
    >
      no subs template
    </Link>,
    "id3",
    "Published",
    "2017-08-10T14:15:16+00:00",
  ],
]
`;

exports[`renders rows correctly with subaccounts 1`] = `
Array [
  Array [
    <Link
      replace={false}
      to="/templates/edit/id1?subaccount=101"
    >
      subaccount template
    </Link>,
    "id1",
    "Published",
    "2017-08-10T14:15:16+00:00",
    <SubaccountTag
      all={false}
      id={101}
      isDefault={false}
      master={false}
      receiveAll={false}
    />,
  ],
  Array [
    <Link
      replace={false}
      to="/templates/edit/id2"
    >
      shared template
    </Link>,
    "id2",
    "Draft",
    "2017-08-10T14:15:16+00:00",
    <SubaccountTag
      all={true}
      id={null}
      isDefault={false}
      master={false}
      receiveAll={false}
    />,
  ],
  Array [
    <Link
      replace={false}
      to="/templates/edit/id3"
    >
      master template
    </Link>,
    "id3",
    "Draft",
    "2017-08-10T14:15:16+00:00",
    null,
  ],
]
`;
